@@ -5,6 +5,8 @@ import br.gov.es.openpmo.dto.ResponseBase;
 import br.gov.es.openpmo.service.label.LabelService;
 import br.gov.es.openpmo.service.permissions.canaccess.ICanAccessService;
 import io.swagger.annotations.Api;
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -12,9 +14,6 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.Arrays;
-import java.util.List;
 
 @Api
 @RestController
@@ -46,7 +45,7 @@ public class LabelController {
                     ResponseEntity.ok(ResponseBase.of(response ? "abbreviatedReprogrammed" : "abbreviatedForeseen"))
             );
         } catch (Exception e) {
-            return List.of(ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build());
+            return Arrays.asList(ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build());
         }
     }
 }
